samples/istio/microservice/gw_vs_https.yaml
# --------------------------------------------------------------------
# Copyright (c) 2021, WSO2 Inc. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ing-gateway-credential
    hosts:
    - "istio-ingressgateway.istio-system"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-https
spec:
  hosts:
  - "istio-ingressgateway.istio-system"
  gateways:
  - https-gateway
  http:
  - match:
      - uri:
          prefix: "/httpbin/v1.0.0/"
    rewrite:
      uri: "/"
    route:
      - destination:
          host: httpbin
          port:
            number: 80
